--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/FundsCrypt.jpg">
         <!--font awesome-->
     <link href="font/css/all.css" rel="stylesheet">
     <!-- Boostrap csss-->
@@ -51,7 +52,7 @@
 
                       <a href="https://online.fundscrypt.com/register" class="btn btn-block mb-3 btnReg">Login</a>
                       <div class="d-flex">
-                        <a href="#" class="text-dark pr-3">Reset <i class="fas fa-angle-right"></i></a>
+                        <a href="#" class="text-dark pr-3">Forgot Password? <i class="fas fa-angle-right"></i></a>
                         <a href="https://online.fundscrypt.com/register" class="text-dark">Sign Up <i class="fas fa-angle-right"></i></a>
                       </div>
                   </form>
